@@ -1,3 +1,10 @@
+mx-tweak (20.09.01) ; urgency=medium
+
+  *  add menu-migrate
+  *  remove template copy to home folder
+
+ -- Dolphin Oracle <dolphinoracle@gmail.com>  Thu, 03 Sep 2020 23:04:26 -0400
+
 mx-tweak (20.08.03) mx; urgency=medium
 
   * update kde reset script
